fix spacing when header is pinned

--- a/rca/static_src/sass/components/_app.scss
+++ b/rca/static_src/sass/components/_app.scss
@@ -115,6 +115,7 @@
 
             @include media-query(large) {
                 background: transparent;
+                overflow: hidden;
             }
         }
     }
